--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-  "apiUrl": "http://localhost:8080",
+  "apiUrl": "https://localhost:8443",
   "ADMIN": "ADMIN",
   "CLIENT": "CLIENT",
   "TRAINER": "TRAINER"
