--- a/backend/service-starter/src/main/resources/application.properties
+++ b/backend/service-starter/src/main/resources/application.properties
@@ -29,7 +29,7 @@ algorithm.training-plan-adding=1.1
 algorithm.training-plan-removing=0.91
 
 #Preferential algorithm intervals [ms]
-#each day at 12am
+#each day at 10pm
 algorithm.cron.presence = 0 0 22 * * ?
 #each 1st day of month at 12am
 algorithm.cron.membership = 0 0 8 1 * ?
