--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,6 +33,7 @@
         <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
         <junit.jupiter.version>5.8.1</junit.jupiter.version>
         <spring.mail.version>2.6.2</spring.mail.version>
+        <spring.retry.version>1.3.1</spring.retry.version>
     </properties>
     <dependencies>
         <dependency>
@@ -102,6 +103,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>${spring.retry.version}</version>
         </dependency>
     </dependencies>
 
