--- a/backend/service-starter/src/main/resources/application.properties
+++ b/backend/service-starter/src/main/resources/application.properties
@@ -30,7 +30,7 @@ algorithm.training-plan-removing=0.91
 
 #Preferential algorithm intervals [ms]
 #each day at 10pm
-algorithm.cron.presence = 0 0 22 * * ?
+algorithm.cron.absence = 0 0 22 * * ?
 #each 1st day of month at 12am
 algorithm.cron.membership = 0 0 8 1 * ?
 
