--- a/backend/service-starter/src/main/resources/api/schemas/booking/BookingRequestPost.yml
+++ b/backend/service-starter/src/main/resources/api/schemas/booking/BookingRequestPost.yml
@@ -14,3 +14,5 @@ components:
         activity:
           type: string
           pattern: "^ACT[0-9]{3}$"
+        account:
+          type: string
